[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/dialogic/Editor/Common/SectionTitle.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialogic/Editor/Common/TLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/dialogic/Editor/SettingsEditor/Scenes/MultilangSettings.gd" type="Script" id=3]
[ext_resource path="res://addons/dialogic/Editor/SettingsEditor/Scenes/LangaugeData.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.252, 0.2718, 0.3246, 1 )

[node name="HistorySettings" type="VBoxContainer"]
margin_top = 258.0
margin_right = 304.0
margin_bottom = 390.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SectionTitle" parent="." instance=ExtResource( 1 )]
margin_right = 304.0
custom_styles/normal = SubResource( 1 )
text = "Multilang settings"
text_key = "Multilang settings"

[node name="MultilangBox" type="HBoxContainer" parent="."]
margin_top = 26.0
margin_right = 304.0
margin_bottom = 50.0

[node name="EnableMultilangSupport" type="CheckBox" parent="MultilangBox"]
margin_right = 194.0
margin_bottom = 24.0
hint_tooltip = "Tick this to enable support for alternate languages in text and question events."
size_flags_horizontal = 3

[node name="EnableLabel" parent="MultilangBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 198.0
margin_top = 5.0
margin_right = 304.0
margin_bottom = 19.0
text = "Enable multilang"
text_key = "Enable multilang"

[node name="settings" type="VBoxContainer" parent="."]
margin_top = 54.0
margin_right = 304.0
margin_bottom = 144.0

[node name="DefaultNameBox" parent="settings" instance=ExtResource( 4 )]
margin_top = 0.0
margin_bottom = 42.0

[node name="HSeparator" type="HSeparator" parent="settings"]
margin_top = 46.0
margin_right = 304.0
margin_bottom = 50.0

[node name="languages" type="VBoxContainer" parent="settings"]
margin_top = 54.0
margin_right = 304.0
margin_bottom = 62.0

[node name="template" parent="settings/languages" instance=ExtResource( 4 )]
visible = false
margin_top = 0.0
margin_bottom = 42.0

[node name="list" type="VBoxContainer" parent="settings/languages"]
margin_right = 304.0

[node name="HSeparator" type="HSeparator" parent="settings/languages"]
margin_top = 4.0
margin_right = 304.0
margin_bottom = 8.0

[node name="newlang" type="HBoxContainer" parent="settings"]
margin_top = 66.0
margin_right = 304.0
margin_bottom = 90.0

[node name="NewName" type="LineEdit" parent="settings/newlang"]
margin_right = 265.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="btnAddnew" type="ToolButton" parent="settings/newlang"]
margin_left = 269.0
margin_right = 304.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 1, 0.145098, 1 )
text = "add"

[connection signal="toggled" from="MultilangBox/EnableMultilangSupport" to="." method="_on_EnableMultilangSupport_toggled"]
